--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,10 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "lobechat-plugin-template"
+name = "ghcr-badge"
 main = "dist/index.js"
 compatibility_date = "2025-02-26"
 compatibility_flags = ["nodejs_compat"]
 minify = true
 logpush = false
-
-services = [
-  { binding = "MYSELF", service = "lobechat-plugin-template" }
-]
 
 [observability]
 enabled = true
